force-app/main/default/objects/Client_Follow_up__c/Client_Follow_up__c.object-meta.xml
<CustomObject>
    <description>A follow-up process that re-engages ET clients if they completed a business registration, consultation or training event.</description>
    <label>Client Follow-Up</label>
    <nameField>
        <displayFormat>CLF-{0000}</displayFormat>
        <label>Client Follow-up Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Follow-Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>