force-app/main/default/objects/Client_Follow_up__c/fields/Acc_FName__c.field-meta.xml
<CustomField>
    <fullName>Acc_FName__c</fullName>
    <formula>Contact_ClientFollowUp__r.Account.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc FName</label>
    <type>Text</type>
</CustomField>