force-app/main/default/objects/Client_Follow_up__c/fields/Acc_LName__c.field-meta.xml
<CustomField>
    <fullName>Acc_LName__c</fullName>
    <formula>Contact_ClientFollowUp__r.Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc LName</label>
    <type>Text</type>
</CustomField>