force-app/main/default/objects/Client_Follow_up__c/fields/Acc_Name__c.field-meta.xml
<CustomField>
    <fullName>Acc_Name__c</fullName>
    <formula>Contact_ClientFollowUp__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc Name</label>
    <type>Text</type>
</CustomField>