force-app/main/default/objects/Client_Follow_up__c/fields/Acc_PEmail__c.field-meta.xml
<CustomField>
    <fullName>Acc_PEmail__c</fullName>
    <formula>Contact_ClientFollowUp__r.Account.TempContactEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc PEmail</label>
    <type>Text</type>
</CustomField>