force-app/main/default/objects/Client_Follow_up__c/fields/Acc_Phone__c.field-meta.xml
<CustomField>
    <fullName>Acc_Phone__c</fullName>
    <formula>Contact_ClientFollowUp__r.Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc Phone</label>
    <type>Text</type>
</CustomField>