force-app/main/default/objects/Client_Follow_up__c/fields/Account_ClientFollowUp__c.field-meta.xml
<CustomField>
    <fullName>Account_ClientFollowUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Follow-Ups</relationshipLabel>
    <relationshipName>Client_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>