force-app/main/default/objects/Client_Follow_up__c/fields/Con_Email__c.field-meta.xml
<CustomField>
    <fullName>Con_Email__c</fullName>
    <formula>Contact_ClientFollowUp__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Con Email</label>
    <type>Text</type>
</CustomField>