force-app/main/default/objects/Client_Follow_up__c/fields/Con_FName__c.field-meta.xml
<CustomField>
    <fullName>Con_FName__c</fullName>
    <formula>Contact_ClientFollowUp__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Con FName</label>
    <type>Text</type>
</CustomField>