force-app/main/default/objects/Client_Follow_up__c/fields/Con_LName__c.field-meta.xml
<CustomField>
    <fullName>Con_LName__c</fullName>
    <formula>Contact_ClientFollowUp__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Con LName</label>
    <type>Text</type>
</CustomField>