force-app/main/default/objects/Client_Follow_up__c/fields/Con_Phone__c.field-meta.xml
<CustomField>
    <fullName>Con_Phone__c</fullName>
    <formula>Contact_ClientFollowUp__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Con Phone</label>
    <type>Text</type>
</CustomField>