force-app/main/default/objects/Client_Follow_up__c/fields/Contact_ClientFollowUp__c.field-meta.xml
<CustomField>
    <fullName>Contact_ClientFollowUp__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Follow-Ups</relationshipLabel>
    <relationshipName>Client_Follow_Ups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>