force-app/main/default/objects/Client_Follow_up__c/fields/Desk_ID__c.field-meta.xml
<CustomField>
    <fullName>Desk_ID__c</fullName>
    <label>Desk ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>