force-app/main/default/objects/Client_Follow_up__c/fields/Do_you_plan_to_start_your_business__c.field-meta.xml
<CustomField>
    <fullName>Do_you_plan_to_start_your_business__c</fullName>
    <description>Dependencies (based in Form Assembly survey form):
 Yes – Q9
 No – end survey.</description>
    <label>Do you plan to start your business?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>