force-app/main/default/objects/Client_Follow_up__c/fields/ET_Consultatnt_to_assist_in_business__c.field-meta.xml
<CustomField>
    <fullName>ET_Consultatnt_to_assist_in_business__c</fullName>
    <description>Dependencies (based in Form Assembly survey form):
Yes – Q11
No – end survey.</description>
    <label>ET Consultatnt to assist in business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>