force-app/main/default/objects/Client_Follow_up__c/fields/ET_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Engagement_Type__c</fullName>
    <label>ET Engagement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>