force-app/main/default/objects/Client_Follow_up__c/fields/ET_to_do_a_story_on_your_business__c.field-meta.xml
<CustomField>
    <fullName>ET_to_do_a_story_on_your_business__c</fullName>
    <description>Dependencies (based in Form Assembly survey form):
Yes – Q24</description>
    <label>ET to do a story on your business?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>