force-app/main/default/objects/Client_Follow_up__c/fields/Have_you_hired_any_additional_staff_sinc__c.field-meta.xml
<CustomField>
    <fullName>Have_you_hired_any_additional_staff_sinc__c</fullName>
    <description>Dependencies (based in Form Assembly survey form):
Yes – Q15
No – end survey.</description>
    <label>Have you hired any additional staff sinc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>