force-app/main/default/objects/Client_Follow_up__c/fields/Hired_additional_staff_since_ET__c.field-meta.xml
<CustomField>
    <fullName>Hired_additional_staff_since_ET__c</fullName>
    <description>Dependencies (based in Form Assembly survey form):
Yes – Q27
No – Q28</description>
    <label>Hired additional staff since ET</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>