force-app/main/default/objects/Client_Follow_up__c/fields/How_did_ET_help__c.field-meta.xml
<CustomField>
    <fullName>How_did_ET_help__c</fullName>
    <label>How did ET help?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>