force-app/main/default/objects/Client_Follow_up__c/fields/If_Yes_how_many__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_how_many__c</fullName>
    <label>If Yes, how many?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>