force-app/main/default/objects/Client_Follow_up__c/fields/If_Yes_How_many_additional_Staff__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_How_many_additional_Staff__c</fullName>
    <label>If Yes, How many additional Staff?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>