force-app/main/default/objects/Client_Follow_up__c/fields/If_yes_what_do_you_need_help_with__c.field-meta.xml
<CustomField>
    <fullName>If_yes_what_do_you_need_help_with__c</fullName>
    <label>If yes, what do you need help with?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>