force-app/main/default/objects/Client_Follow_up__c/fields/Including_yourself_how_many_people_work__c.field-meta.xml
<CustomField>
    <fullName>Including_yourself_how_many_people_work__c</fullName>
    <label>Including yourself, how many people work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>