force-app/main/default/objects/Client_Follow_up__c/fields/Increased_financing_since_engaged_ET_1y__c.field-meta.xml
<CustomField>
    <fullName>Increased_financing_since_engaged_ET_1y__c</fullName>
    <label>Increased financing since engaged ET(1y)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>