force-app/main/default/objects/Client_Follow_up__c/fields/Increased_revenue_since_engaging_ET__c.field-meta.xml
<CustomField>
    <fullName>Increased_revenue_since_engaging_ET__c</fullName>
    <label>Increased revenue since engaging ET?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>