force-app/main/default/objects/Client_Follow_up__c/fields/Is_your_business_still_operating__c.field-meta.xml
<CustomField>
    <fullName>Is_your_business_still_operating__c</fullName>
    <description>Dependencies (based in Form Assembly survey form):
Yes – Q24
No – Q32</description>
    <label>Is your business still operating?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>