force-app/main/default/objects/Client_Follow_up__c/fields/Moved_to_a_larger_location_1yr__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_a_larger_location_1yr__c</fullName>
    <label>Moved to a larger location(1yr)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>