force-app/main/default/objects/Client_Follow_up__c/fields/Plan_to_hire_new_staff_1yr__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_hire_new_staff_1yr__c</fullName>
    <label>Plan to hire new staff (1yr)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>