force-app/main/default/objects/Client_Follow_up__c/fields/Plan_to_hire_new_staff_in_the_next_6_mon__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_hire_new_staff_in_the_next_6_mon__c</fullName>
    <label>Plan to hire new staff in 6 month(exist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>