force-app/main/default/objects/Client_Follow_up__c/fields/Please_indicate_the_status_of_business__c.field-meta.xml
<CustomField>
    <fullName>Please_indicate_the_status_of_business__c</fullName>
    <description>Dependencies (based in Form Assembly survey form):
	Not Started – Section – Business Not Started
	New (operating less than 6 months) – Section – New Business
	Existing (operating longer than 6 months) – Section – Existing Business</description>
    <label>Please indicate the status of business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>New (operating less than 6 months)</fullName>
            </value>
            <value>
                <fullName>Existing (operating longer than 6 months)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>