force-app/main/default/objects/Client_Follow_up__c/fields/Reasons_your_business_did_not_continue__c.field-meta.xml
<CustomField>
    <fullName>Reasons_your_business_did_not_continue__c</fullName>
    <label>Reasons your business did not continue</label>
    <length>200</length>
    <type>Text</type>
</CustomField>