force-app/main/default/objects/Client_Follow_up__c/fields/RegistrationID__c.field-meta.xml
<CustomField>
    <fullName>RegistrationID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If they have a record that created or modified this object, it would be linked to via this object.</description>
    <label>Registration ID</label>
    <referenceTo>Online_Registration__c</referenceTo>
    <relationshipLabel>Client Follow-Ups</relationshipLabel>
    <relationshipName>Client_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>