force-app/main/default/objects/Client_Follow_up__c/fields/Since_engaging_ET_did_you_start_business__c.field-meta.xml
<CustomField>
    <fullName>Since_engaging_ET_did_you_start_business__c</fullName>
    <label>Since engaging ET did you start business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - I started my business after visiting Enterprise Toronto.</fullName>
            </value>
            <value>
                <fullName>No - I started my business before visiting Enterprise Toronto.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>