force-app/main/default/objects/Client_Follow_up__c/fields/Start_business_next_year__c.field-meta.xml
<CustomField>
    <fullName>Start_business_next_year__c</fullName>
    <description>Dependencies (based in Form Assembly survey form):
Yes – Q10
No – end survey</description>
    <label>Start business next year?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>