force-app/main/default/objects/Client_Follow_up__c/fields/Work_Flow_Session__c.field-meta.xml
<CustomField>
    <fullName>Work_Flow_Session__c</fullName>
    <description>Identifies what record type is driving the work flow.</description>
    <label>Work Flow Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>