force-app/main/default/objects/Client_Follow_up__c/fields/Work_Flow_Stage__c.field-meta.xml
<CustomField>
    <fullName>Work_Flow_Stage__c</fullName>
    <label>Work Flow Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Follow-Up</fullName>
            </value>
            <value>
                <fullName>1 Year Follow-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>