force-app/main/default/objects/Client_Follow_up__c/fields/Work_Flow_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Flow_Status__c</fullName>
    <description>Identifies whether the workflow has started and whether there is a response.</description>
    <label>Work Flow Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>